# sha3

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench_result_at_commit_79994d4_on_Linux_6.17.0-6-generic_x86_64_with_g++_15.json  bench_result_on_Darwin_24.1.0_arm64_with_c++_16.0.0.json  bench_result_on_Darwin_24.3.0_arm64_with_c++_16.0.0.json  bench_result_on_Linux_6.11.0-18-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.11.0-9-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.8.0-1016-aws_aarch64_with_g++_13.json
.github/workflows/: test_ci.yml
bench/: README.md  main.cpp
benchcmp_xkcp/: .gitignore  CMakeLists.txt  bench_combined.cpp  run_benchmarks.sh
benches/: bench.mk  bench_common.hpp  bench_hashing.cpp  bench_keccak.cpp  bench_xof.cpp
benchmarks/: bench_hashing.cpp  bench_keccak.cpp  bench_xof.cpp  main.cpp
example/: incremental_shake128.cpp  incremental_shake256.cpp  sha3_224.cpp  sha3_256.cpp  sha3_384.cpp  sha3_512.cpp  shake128.cpp  shake256.cpp
examples/: CMakeLists.txt  README.md  example.mk  example_helper.hpp  sha3_224.cpp  sha3_256.cpp  sha3_384.cpp  sha3_512.cpp  shake128.cpp  shake256.cpp  turboshake128.cpp  turboshake256.cpp
include/: bench_keccak.hpp  bench_sha3.hpp  keccak.hpp  sha3_224.hpp  sha3_256.hpp  sha3_384.hpp  sha3_512.hpp  shake128.hpp  shake256.hpp  sponge.hpp  test_shake256.hpp  utils.hpp
include/bench/: bench_keccak.hpp  bench_sha3.hpp
include/benchmarks/: bench_hashing.hpp  bench_keccak.hpp  bench_sha3.hpp  bench_xof.hpp
include/sha3/: sha3_224.hpp  sha3_256.hpp  sha3_384.hpp  sha3_512.hpp  shake128.hpp  shake128_x4.hpp  shake256.hpp  shake256_x4.hpp  turboshake128.hpp  turboshake256.hpp
include/sha3/internals/: force_inline.hpp  keccak.hpp  keccak_x4.hpp  sponge.hpp  sponge_x4.hpp  utils.hpp
include/sha3/internals/simd/: avx2.hpp
include/test/: test_shake128.hpp  test_shake256.hpp
include/tests/: test_hashing.hpp  test_xof.hpp
kats/: sha3_224.kat  sha3_256.kat  sha3_384.kat  sha3_512.kat  shake128.kat  shake256.kat
test/: main.cpp
tests/: main.cpp  test.mk  test_conf.hpp  test_sha3_224.cpp  test_sha3_256.cpp  test_sha3_384.cpp  test_sha3_512.cpp  test_shake128.cpp  test_shake128_x4.cpp  test_shake256.cpp  test_shake256_x4.cpp  test_turboshake128.cpp  test_turboshake256.cpp  test_utils.hpp
wrapper/: sha3.cpp
wrapper/python/: requirements.txt  sha3.py  test_sha3.py
